<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name"> TODO </string>
    <string name="title_activity_edit_item">Add/Edit Todo</string>
    <string name="EditTodoText">Add/Edit Todo Item Below</string>
    <string name="labelSaveButton">Save</string>
    <string name="labelDateButton">Due Date</string>

    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_add">Add</string>
    <string name="main_menu_exit">Exit</string>

    <string name="menu_edit_settings">Settings</string>

    <string name="priority">Priority</string>
    <string name="lblTodo">Todo</string>
</resources>
