<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item
        android:id="@+id/main_menu_add"
        android:orderInCategory="100"
        android:title="@string/main_menu_add"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <item
        android:id="@+id/main_menu_exit"
        android:title="@string/main_menu_exit"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/main_menu_settings"
        android:title="@string/main_menu_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
    />
</menu>
