<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:descendantFocusability="blocksDescendants"
    android:focusable="false">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/ic_launcher"/>

    <TextView
        android:id="@+id/lblPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority"
        android:paddingRight="10dp"
        android:layout_toEndOf="@id/imageView"
        android:textColor="#ff0000ff"/>

    <TextView
        android:id="@+id/tvPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/lblPriority"
        android:hint = "Not Set"
        android:paddingRight="20dp"
        android:text="Text"
        android:inputType="number"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/lblDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/tvPriority"
        android:text="@string/labelDateButton"
        android:paddingRight="10dp"
        android:textColor="#ff0000ff"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/tvDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Text"
        android:layout_toEndOf="@id/lblDueDate"
        android:layout_alignParentEnd="true"
        android:hint="Not Set"
        android:paddingRight="10dp"
        android:layout_alignBottom="@+id/tvPriority" />

    <TextView
        android:id="@+id/lblTodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblTodo"
        android:paddingRight="10dp"
        android:layout_toEndOf="@id/imageView"
        android:layout_below="@+id/tvDueDate"
        android:textColor="#ff0000ff"/>

    <TextView
        android:id="@+id/tvText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Text"
        android:layout_toEndOf="@id/lblTodo"
        android:layout_below="@+id/tvDueDate"
        />



</RelativeLayout>