<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.amberved.todo.todoapp.AddEditItemActivity"
    android:focusable="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EditTodoText"
        android:id="@+id/lblEditTodo"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etPriority"
        android:hint="Enter Todo Priority (default = 0)"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblEditTodo"
        android:text=""
        android:numeric="integer"
        android:inputType="number"
        android:layout_alignEnd="@+id/etTodoText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etTodoText"
        android:hint="Enter a new Todo"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etPriority"
        android:text=""
        android:layout_alignEnd="@+id/etDueDate" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etDueDate"
        android:hint="Due Date"
        android:text=""
        android:layout_alignBottom="@+id/btnDueDate"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/btnDueDate"
        android:editable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="datetime" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelDateButton"
        android:id="@+id/btnDueDate"
        android:onClick="onClickDueDateButton"
        android:layout_below="@+id/etTodoText"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imTodoLogo"
        android:layout_below="@+id/btnDueDate"
        android:src="@drawable/ic_launcher"
        android:layout_alignEnd="@+id/etDueDate"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btnSave"
        android:onClick="onClickImageViewTodoLogo"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelSaveButton"
        android:id="@+id/btnSave"
        android:onClick="onClickSaveButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
